angular components created using angular/cli

--- a/ngapp/angular.json
+++ b/ngapp/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "ngapp"
+    }
+  },
+  "defaultProject": "ngapp",
+  "cli": {
+    "analytics": false
+  }
 }
