--- a/ngapp/package.json
+++ b/ngapp/package.json
@@ -19,6 +19,15 @@
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
     "@angular/router": "~9.1.1",
+    "angular-bootstrap-datetimepicker": "^4.0.2",
+    "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
+    "ng-number-picker": "^1.1.9",
+    "ng-pick-datetime": "^7.0.0",
+    "ngx-alerts": "^9.0.2",
+    "ngx-date-time-picker": "^1.1.6",
+    "ngx-datetime-picker": "^3.0.0",
+    "open-iconic": "^1.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
